<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/day_background"
        android:gravity="center"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user_update"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_circleuser"
            android:layout_marginTop="-10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/image_camera_update"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_camera"/>
            <ImageView
                android:layout_marginLeft="20dp"
                android:id="@+id/image_photo_update"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_photo"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txt_name_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25dp"
            android:layout_marginTop="0dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_phone_number_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_Name_update"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_signup"
            android:hint="   Name..."
            android:textSize="25dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:text="@string/sex"
                android:textSize="24dp"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/rdo_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_male"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/rdo_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/sex_female"
                    android:textSize="25dp" />

            </RadioGroup>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_PhoneNumber_update"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_signup"
            android:hint="   Phone_Number..."
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_address_update"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_signup"
            android:hint="   Address..."
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/btn_update_confirm"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_signup"
            android:text="@string/btn_update_confirm"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/btn_update_cancle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_signup"
            android:text="@string/btn_update_cancel"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>