<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout_header_info_user"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#8DEEEE"
        android:gravity="center_vertical"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user_drawer"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ty"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/txt_Name_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txt_UserName_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/txt_address_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone:"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/txt_phone_number_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="17dp"
                android:layout_marginLeft="24dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="17dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/txt_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="17dp"
                android:layout_marginLeft="43dp"
                />
        </LinearLayout>

        </LinearLayout>
</LinearLayout>