<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon_change_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CHANGE"
            android:textSize="30dp"
            android:textColor="#00ADFF"
            android:textStyle="bold"
            android:layout_gravity="center"/>_
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PASSWORD"
            android:textSize="30dp"
            android:textColor="#00ADFF"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_make_sure_password"
            android:textSize="20dp"
            android:layout_gravity="center"
           />


        <EditText
            android:id="@+id/edt_current_password"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_signup"
            android:hint="Your current password..."
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/icon_change_password"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_signup"
            android:hint="Your new password..."
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/icon_blur_lock_changepassword"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edt_new_confirm"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_signup"
            android:hint="Confirm password..."
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/icon_lock_changepassword"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            >
                <Button
                    android:id="@+id/btn_update_confirm_password"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_signup"
                    android:text="@string/btn_update_confirm"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal" />
                <Button
                    android:id="@+id/btn_update_cancle_password"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_signup"
                    android:text="@string/btn_update_cancel"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"/>
        </LinearLayout>
</LinearLayout>