<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout_signup"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textStyle="bold"
        android:textSize="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#98F5FF"
        />
    <EditText
        android:id="@+id/edt_PhoneNumber_SignUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="    Phone_Number..."
        android:background="@drawable/edit_text_signup"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/edt_Name_Signup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_signup"
        android:hint="Name..."
        android:paddingLeft="15dp"
        android:textSize="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:text="@string/sex"
            android:textSize="24dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">

            <RadioButton
                android:id="@+id/rdo_Male_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_male"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/rdo_Female_Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/sex_female"
                android:textSize="25dp" />

        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_Address_Signup"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_signup"
        android:hint="Address..."
        android:paddingLeft="15dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edt_Password_SignUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="    Password..."
        android:background="@drawable/edit_text_signup"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edt_RepeatPassword_SignUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="    Repeat Password..."
        android:background="@drawable/edit_text_signup"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up with social account"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/iconfb"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:src="@drawable/icongoogle"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_signup"
            android:layout_gravity="center"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/btn_backsignin"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_signup"
            android:text="Back"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>


</LinearLayout>